Fix api schema
