# src/fastapi_score_server_app/handler/schema.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  api.yml
-#   timestamp: 2023-05-28T09:17:28+00:00
+#   timestamp: 2023-05-28T12:18:29+00:00
 
 from __future__ import annotations
 
@@ -11,14 +11,19 @@ from typing import List
 from pydantic import BaseModel
 
 
-class Score(BaseModel):
+class ScoreRequest(BaseModel):
+    username: str
+    value: int
+
+
+class ScoreResponse(BaseModel):
     id: int
     username: str
     value: int
 
 
-class Scores(BaseModel):
-    __root__: List[Score]
+class ScoresResponse(BaseModel):
+    __root__: List[ScoreResponse]
 
 
 class Error(BaseModel):
